--- a/author.html
+++ b/author.html
@@ -1,5 +1,28 @@
-<html>
+<!doctype html>
+<html lang="fr">
+<head>
+  <meta charset="utf-8">
+  <title>Titre</title>
+
+</head>
+<body>
+
 <h1>test</h1>
 <p>test</p>
-</html>
+ <ul style="list-style-type:disc;">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+<p>Corentin</p>
+</body>
 
