ajout Nouvelle video

--- a/siteStreaming/index.html
+++ b/siteStreaming/index.html
@@ -105,7 +105,7 @@ http://www.tooplate.com/view/2111-pro-line
 
           <header class="tm-feature-header">
 
-            <video id="hero-vid" autoplay="" loop="" muted width="400" height="222"> 
+            <video id="hero-vid" autoplay="" loop="" muted> 
         <source src="videos/city-night-blur-01.mp4" type="video/mp4" />
         Your browser does not support the video tag.
       </video>
@@ -113,19 +113,12 @@ http://www.tooplate.com/view/2111-pro-line
         </section>
         <section class="col-md-6 col-sm-12 tm-feature-block">
           <header class="tm-feature-header">
-            <i class="fas fa-5x fa-atom tm-feature-icon"></i>
-            <h3 class="tm-feature-h">Cras pretium diam ut metus</h3>
+            <video id="hero-vid" autoplay="" loop="" muted>
+        <source src="videos/city-night-blur-01.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
           </header>
-          <p>
-            Phasellus tristique, sapien quis mattis pellentesque, felis turpis
-            placerat turpis, nec viverra quam nisl at velit. Pellentesque
-            iaculis convallis egestas.
-          </p>
-          <p>
-            Nunc ut elit eget velit mollis sodales. Ut non mauris ut ligula
-            mattis consectetur. Aenean augue arcu, rhoncus at nibh nec, lacinia
-            blandit nulla.
-          </p>
+          
         </section>
       </div>
     </div>
