--- a/siteStreaming/index.html
+++ b/siteStreaming/index.html
@@ -168,7 +168,7 @@ http://www.tooplate.com/view/2111-pro-line
         <div class="col-lg-6">
           <div class="tm-activity-block">
             <div class="tm-activity-img-container">
-              <img src="img/img-03.jpg" alt="Image" class="tm-activity-img" />
+              <img src="img/img.jpg" alt="Image" class="tm-activity-img" width="175" height="175" />
             </div>
             <div class="tm-activity-block-text">
               <h3 class="tm-text-blue">Lorem ipsum dolor sit amet</h3>
