--- a/siteStreaming/index.html
+++ b/siteStreaming/index.html
@@ -335,7 +335,7 @@ http://www.tooplate.com/view/2111-pro-line
               </div>
               <div class="tm-text-right">
                 <button type="submit" class="btn tm-btn tm-btn-big">
-                  Send It
+                  Send Us
                 </button>
               </div>
             </form>
